# arb

./: .gitignore  README.md  STRATEGY.md  USAGE.md
mandate/: BUILD.md  PLAN.md  README.md  ROADMAP.md  USAGE.md
mandate/agent/: .env.example  README.md  package-lock.json  package.json
mandate/agent/src/: abi.ts  agent.ts  chain.ts  rationale.ts  solver.ts
mandate/contracts/: .env.example  foundry.toml
mandate/contracts/script/: Deploy.s.sol  DeployHello.s.sol
mandate/contracts/src/: HelloRobinhood.sol  MandateVault.sol  MandateVaultFactory.sol  PriceOracle.sol  StockAMM.sol
mandate/contracts/test/: MandateVault.t.sol
mandate/web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
mandate/web/app/: globals.css  layout.tsx  providers.tsx
mandate/web/components/: ActivityRow.tsx  AllocationDonut.tsx  AnimatedNumber.tsx  BudgetMeter.tsx  GuardrailSlider.tsx  KillSwitch.tsx  NavBar.tsx  PresetCard.tsx  ProjectionChart.tsx  RetentionPanel.tsx
sentinel/: BUILD.md  PLAN.md  README.md  ROADMAP.md  USAGE.md
sentinel/agent/: .env.example  README.md  package-lock.json  package.json
sentinel/agent/src/: abi.ts  chain.ts  compromised.ts  denylist.ts  driver.ts  honest.ts  runner.ts  (+1 more)
sentinel/contracts/: .env.example  .gas-snapshot  BENCHMARK.md  foundry.toml
sentinel/contracts/src/risk-engine-stylus/: Cargo.toml  README.md
sentinel/contracts/src/risk-engine-stylus/src/: lib.rs
sentinel/web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+35 files in other folders)
