[package]
name = "risk-engine-stylus"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SENTINEL compute-heavy risk scorer — Arbitrum Stylus (Rust/WASM) kernel"

[dependencies]
stylus-sdk = "0.6.0"
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
